- added site update service - startet implementing new site UI

--- a/cee-news-webreader/pom.xml
+++ b/cee-news-webreader/pom.xml
@@ -34,6 +34,18 @@
 		</dependency>
 		<dependency>
 			<groupId>com.cee</groupId>
+			<artifactId>cee-news-parser</artifactId>
+			<type>jar</type>
+			<scope>compile</scope>
+		</dependency>
+		<dependency>
+			<groupId>com.cee</groupId>
+			<artifactId>cee-news-parser-impl</artifactId>
+			<type>jar</type>
+			<scope>runtime</scope>
+		</dependency>
+		<dependency>
+			<groupId>com.cee</groupId>
 			<artifactId>cee-news-store-jcr</artifactId>
 			<type>jar</type>
 			<scope>runtime</scope>
