--- a/cee-news-webreader/pom.xml
+++ b/cee-news-webreader/pom.xml
@@ -94,7 +94,7 @@
 			<plugin>
 				<groupId>org.codehaus.mojo</groupId>
 				<artifactId>gwt-maven-plugin</artifactId>
-				<version>2.1.0-1</version>
+				<version>2.3.0</version>
 				<executions>
 					<execution>
 						<goals>
@@ -111,7 +111,7 @@
 					<runTarget>NewsReader.html</runTarget>
 					<hostedWebapp>${webappDirectory}</hostedWebapp>
 					<i18nMessagesBundle>com.cee.news.client.Messages</i18nMessagesBundle>
-					<draftCompile>true</draftCompile>
+					<encoding>${source.encoding}</encoding>
 				</configuration>
 			</plugin>
 
