--- a/pom.xml
+++ b/pom.xml
@@ -10,13 +10,12 @@
 	<packaging>pom</packaging>
 
 	<properties>
+		<jdk.version>1.6</jdk.version>
 		<project.version>0.0.2-SNAPSHOT</project.version>
-		<gwt.version>2.1.0</gwt.version>
+		<gwt.version>2.3.0</gwt.version>
 		<spring.version>2.5.6.SEC02</spring.version>
-
-		<maven.compiler.source>1.6</maven.compiler.source>
-		<maven.compiler.target>1.6</maven.compiler.target>
-		<project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
+		
+		<source.encoding>UTF-8</source.encoding>
 		<repository.url>http://192.168.1.201:8080/archiva</repository.url>
 	</properties>
 
@@ -38,17 +37,19 @@
 			<plugin>
 				<groupId>org.apache.maven.plugins</groupId>
 				<artifactId>maven-compiler-plugin</artifactId>
+				<version>2.3.2</version>
 				<configuration>
-					<source>${maven.compiler.source}</source>
-					<target>${maven.compiler.target}</target>
-					<encoding>${project.build.sourceEncoding}</encoding>
+					<source>${jdk.version}</source>
+					<target>${jdk.version}</target>
+					<encoding>${source.encoding}</encoding>
 				</configuration>
 			</plugin>
 			<plugin>
 				<groupId>org.apache.maven.plugins</groupId>
 				<artifactId>maven-resources-plugin</artifactId>
+				<version>2.5</version>
 				<configuration>
-					<encoding>${project.build.sourceEncoding}</encoding>
+					<encoding>${source.encoding}</encoding>
 				</configuration>
 			</plugin>
 		</plugins>
