--- a/cee-news-webreader/pom.xml
+++ b/cee-news-webreader/pom.xml
@@ -2,16 +2,15 @@
 <project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
 	xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/maven-v4_0_0.xsd">
 
-	<!-- POM file generated with GWT webAppCreator -->
 	<modelVersion>4.0.0</modelVersion>
 	<artifactId>cee-news-webreader</artifactId>
 	<packaging>war</packaging>
-	<name>GWT Maven Archetype</name>
+	<name>News Reader</name>
 		
 	<parent>
 		<groupId>com.cee</groupId>
 		<artifactId>cee</artifactId>
-		<version>0.0.1-SNAPSHOT</version>
+		<version>1.0-SNAPSHOT</version>
 		<relativePath>../pom.xml</relativePath>
 	</parent>
 
@@ -94,7 +93,6 @@
 			<plugin>
 				<groupId>org.codehaus.mojo</groupId>
 				<artifactId>gwt-maven-plugin</artifactId>
-				<version>2.3.0</version>
 				<executions>
 					<execution>
 						<goals>
@@ -119,7 +117,6 @@
 			<plugin>
 				<groupId>org.apache.maven.plugins</groupId>
 				<artifactId>maven-war-plugin</artifactId>
-				<version>2.1.1</version>
 				<executions>
 					<execution>
 						<phase>compile</phase>
