--- a/cee-news-parser/pom.xml
+++ b/cee-news-parser/pom.xml
@@ -24,6 +24,8 @@
 			<groupId>org.apache.httpcomponents</groupId>
 			<artifactId>httpclient</artifactId>
 		</dependency>
+		
+		<!-- testing -->
 		<dependency>
 			<groupId>junit</groupId>
 			<artifactId>junit</artifactId>
