--- a/pom.xml
+++ b/pom.xml
@@ -181,6 +181,11 @@
 				<version>1.5.3</version>
 			</dependency>
 			<dependency>
+				<groupId>log4j</groupId>
+				<artifactId>log4j</artifactId>
+				<version>1.2.14</version>
+			</dependency>
+			<dependency>
 				<groupId>org.springframework</groupId>
 				<artifactId>spring</artifactId>
 				<version>${spring.version}</version>
