--- a/cee-news-webreader-tomcat6/pom.xml
+++ b/cee-news-webreader-tomcat6/pom.xml
@@ -26,7 +26,7 @@
 		<!-- external -->
 		<dependency>
 			<groupId>org.slf4j</groupId>
-			<artifactId>slf4j-jcl</artifactId>
+			<artifactId>slf4j-log4j12</artifactId>
 		</dependency>
 	</dependencies>
 </project>
