Logging configuration, slf4j over jcl

--- a/cee-news-webreader-tomcat6/pom.xml
+++ b/cee-news-webreader-tomcat6/pom.xml
@@ -24,9 +24,10 @@
 		</dependency>
 		
 		<!-- external -->
+
 		<dependency>
 			<groupId>org.slf4j</groupId>
-			<artifactId>slf4j-log4j12</artifactId>
+			<artifactId>slf4j-jcl</artifactId>
 		</dependency>
 	</dependencies>
 </project>
