--- a/cee-news-webreader-tomcat6/pom.xml
+++ b/cee-news-webreader-tomcat6/pom.xml
@@ -24,10 +24,13 @@
 		</dependency>
 		
 		<!-- external -->
-
 		<dependency>
 			<groupId>org.slf4j</groupId>
-			<artifactId>slf4j-jcl</artifactId>
+			<artifactId>slf4j-log4j12</artifactId>
+		</dependency>
+		<dependency>
+			<groupId>log4j</groupId>
+			<artifactId>log4j</artifactId>
 		</dependency>
 	</dependencies>
 </project>
