--- a/pom.xml
+++ b/pom.xml
@@ -214,6 +214,11 @@
 				<version>1.2.16</version>
 			</dependency>
 			<dependency>
+				<groupId>log4j</groupId>
+				<artifactId>apache-log4j-extras</artifactId>
+				<version>1.1</version>
+			</dependency>
+			<dependency>
 				<groupId>org.springframework</groupId>
 				<artifactId>spring</artifactId>
 				<version>${spring.version}</version>
