--- a/cee-news-parser/pom.xml
+++ b/cee-news-parser/pom.xml
@@ -25,6 +25,11 @@
 			<artifactId>httpclient</artifactId>
 		</dependency>
 		
+		<dependency>
+			<groupId>org.slf4j</groupId>
+			<artifactId>slf4j-api</artifactId>
+		</dependency>
+		
 		<!-- testing -->
 		<dependency>
 			<groupId>junit</groupId>
