--- a/pom.xml
+++ b/pom.xml
@@ -103,6 +103,12 @@
 			</dependency>
 			<dependency>
 				<groupId>com.cee</groupId>
+				<artifactId>cee-news-store-api</artifactId>
+				<classifier>sources</classifier>
+				<version>${project.version}</version>
+			</dependency>
+			<dependency>
+				<groupId>com.cee</groupId>
 				<artifactId>cee-news-store-jcr</artifactId>
 				<version>${project.version}</version>
 			</dependency>
