--- a/cee-news-store-jcr/pom.xml
+++ b/cee-news-store-jcr/pom.xml
@@ -28,6 +28,10 @@
 			<groupId>org.apache.jackrabbit</groupId>
 			<artifactId>jackrabbit-jcr-commons</artifactId>
 		</dependency>
+		<dependency>
+			<groupId>org.slf4j</groupId>
+			<artifactId>slf4j-api</artifactId>
+		</dependency>
 
 		<!-- testing -->
 		<dependency>
