--- a/cee-news-webreader/pom.xml
+++ b/cee-news-webreader/pom.xml
@@ -103,7 +103,7 @@
 		<dependency>
 		    <groupId>org.springbyexample</groupId>
 		    <artifactId>org.springbyexample.threadscope</artifactId>
-			<scope>runtime</scope>
+			<scope>compile</scope>
 		</dependency>
 		<dependency>
 			<groupId>org.springframework</groupId>
