removed user name from scm settings

--- a/pom.xml
+++ b/pom.xml
@@ -38,9 +38,9 @@
 	</distributionManagement>
 	
 	<scm>
-		<connection>scm:svn:svn://andreasbehnke@192.168.1.201/cee/trunk</connection>
-		<developerConnection>scm:svn:svn://andreasbehnke@192.168.1.201/cee/trunk</developerConnection>
-		<url>svn://andreasbehnke@192.168.1.201/cee/trunk</url>
+		<connection>scm:svn:svn://192.168.1.201/cee/trunk</connection>
+		<developerConnection>scm:svn:svn://192.168.1.201/cee/trunk</developerConnection>
+		<url>svn://192.168.1.201/cee/trunk</url>
 	</scm>
 	
 	<build>
