started implementing # 114: Implement View "What others say" https://www.andreasbehnke.com/mantis/view.php?id=114

--- a/cee-news-store-jcr/pom.xml
+++ b/cee-news-store-jcr/pom.xml
@@ -15,6 +15,10 @@
 		<!-- internal -->
 		<dependency>
 			<groupId>com.cee</groupId>
+			<artifactId>cee-news-search-api</artifactId>
+		</dependency>
+		<dependency>
+			<groupId>com.cee</groupId>
 			<artifactId>cee-news-store-api</artifactId>
 		</dependency>
 
