--- a/pom.xml
+++ b/pom.xml
@@ -109,6 +109,11 @@
 			</dependency>
 			<dependency>
 				<groupId>com.cee</groupId>
+				<artifactId>cee-news-search-api</artifactId>
+				<version>${project.version}</version>
+			</dependency>
+			<dependency>
+				<groupId>com.cee</groupId>
 				<artifactId>cee-news-store-api</artifactId>
 				<version>${project.version}</version>
 			</dependency>
