NEW - # 114: Implement View "What others say" https://www.andreasbehnke.com/mantis/view.php?id=114

--- a/cee-news-webreader/pom.xml
+++ b/cee-news-webreader/pom.xml
@@ -33,7 +33,7 @@
 		<dependency>
 			<groupId>com.cee</groupId>
 			<artifactId>cee-news-store-api</artifactId>
-			<type>jar</type>
+			<classifier>sources</classifier>
 			<scope>compile</scope>
 		</dependency>
 		<dependency>
