#131 Externalize configuration - added configuration for SiteUpdateService #129 Site update service is started by client, not at service initialization time. Lazy initialization of the thread pool. Provide more configuration parameters

--- a/cee-news-webreader/src/main/resources/default.properties
+++ b/cee-news-webreader/src/main/resources/default.properties
@@ -1,6 +1,18 @@
+#***************************************
+#JCR repository settings
+#***************************************
 jcr.repository.dir=repository
 jcr.repository.config.file=repository.xml
 jcr.user.name=username
 jcr.user.password=password
-update.service.concurrent.threads=10
-update.service.scheduler.delay=10
+#***************************************
+# update service settings
+#***************************************
+#the number of threads which are instantiated by default
+update.service.core.pool.size=10
+#the maximum number of threads which are instantiated before a command is queued
+update.service.max.pool.size=50
+#the delay in milliseconds before an unused thread is disposed
+update.service.keep.alive.time=10000
+#the delay in minutes between site update checks
+update.service.scheduler.fixed.delay=5
