--- a/cee-news-parser/pom.xml
+++ b/cee-news-parser/pom.xml
@@ -20,10 +20,14 @@
 
 		<!-- external -->
 		<dependency>
+			<!-- TODO: Replace with commons-io 2.1 -->
+			<groupId>net.java.dev.rome</groupId>
+			<artifactId>rome</artifactId>
+		</dependency>
+		<dependency>
 			<groupId>org.apache.httpcomponents</groupId>
 			<artifactId>httpclient</artifactId>
 		</dependency>
-		
 		<dependency>
 			<groupId>org.slf4j</groupId>
 			<artifactId>slf4j-api</artifactId>
