--- a/cee-news-webreader/pom.xml
+++ b/cee-news-webreader/pom.xml
@@ -76,6 +76,11 @@
 			<artifactId>gwt-user</artifactId>
 		</dependency>
 		<dependency>
+			<groupId>com.sourceallies.beanoh</groupId>
+			<artifactId>beanoh</artifactId>
+			<scope>test</scope>
+		</dependency>
+		<dependency>
 			<groupId>junit</groupId>
 			<artifactId>junit</artifactId>
 			<scope>test</scope>
