--- a/cee-news-webreader/pom.xml
+++ b/cee-news-webreader/pom.xml
@@ -137,7 +137,8 @@
 						<goals>
 							<goal>compile</goal>
 							<goal>test</goal>
-							<goal>i18n</goal>
+							<!-- TODO: localization -->
+							<!-- goal>i18n</goal -->
 							<goal>generateAsync</goal>
 						</goals>
 					</execution>
@@ -147,7 +148,7 @@
 				<configuration>
 					<runTarget>NewsReader.html</runTarget>
 					<hostedWebapp>${webappDirectory}</hostedWebapp>
-					<i18nMessagesBundle>com.cee.news.client.Messages</i18nMessagesBundle>
+					<!-- i18nMessagesBundle>com.cee.news.client.Messages</i18nMessagesBundle -->
 					<encoding>${source.encoding}</encoding>
 				</configuration>
 			</plugin>
