--- a/cee-news-webreader/src/main/resources/default.properties
+++ b/cee-news-webreader/src/main/resources/default.properties
@@ -2,7 +2,7 @@
 #JCR repository settings
 #***************************************
 jcr.repository.dir=repository
-jcr.repository.config.file=repository.xml
+jcr.repository.config.file=${jcr.repository.dir}\\repository.xml
 jcr.user.name=username
 jcr.user.password=password
 #***************************************
