- switched to XmlStreamReader implementation of commons-io - better log4j logging configuration

--- a/cee-news-parser-impl/pom.xml
+++ b/cee-news-parser-impl/pom.xml
@@ -24,6 +24,10 @@
 
 		<!-- external -->
 		<dependency>
+			<groupId>commons-io</groupId>
+			<artifactId>commons-io</artifactId>
+		</dependency>
+		<dependency>
 			<groupId>de.l3s.boilerpipe</groupId>
 			<artifactId>boilerpipe</artifactId>
 		</dependency>
