- update schedular will start at boot time - introduced property for first schedule delay - switched to GWT 2.4.0 - switched to Java 1.7

--- a/cee-news-webreader/src/main/resources/default.properties
+++ b/cee-news-webreader/src/main/resources/default.properties
@@ -14,5 +14,7 @@ update.service.core.pool.size=10
 update.service.max.pool.size=50
 #the delay in milliseconds before an unused thread is disposed
 update.service.keep.alive.time=10000
-#the delay in minutes between site update checks
+#the delay in minutes for the first site update
+update.service.scheduler.initial.delay=1
+#the delay in minutes between site updates
 update.service.scheduler.fixed.delay=5
