--- a/pom.xml
+++ b/pom.xml
@@ -9,10 +9,10 @@
 	<packaging>pom</packaging>
 
 	<properties>
-		<jdk.version>1.6</jdk.version>
+		<jdk.version>1.7</jdk.version>
 		
 		<!-- dependency versions -->
-		<gwt.version>2.3.0</gwt.version>
+		<gwt.version>2.4.0</gwt.version>
 		<spring.version>3.0.6.RELEASE</spring.version>
 		<!-- TODO: Set this to 1.6.2! -->
 		<slf4j.version>1.6.1</slf4j.version>
@@ -67,7 +67,7 @@
 			<plugin>
 				<groupId>org.codehaus.mojo</groupId>
 				<artifactId>gwt-maven-plugin</artifactId>
-				<version>2.3.0</version>
+				<version>${gwt.version}</version>
 			</plugin>
 
 			<plugin>
