--- a/cee-news-webreader-tomcat6/pom.xml
+++ b/cee-news-webreader-tomcat6/pom.xml
@@ -9,7 +9,7 @@
 	<parent>
 		<groupId>com.cee</groupId>
 		<artifactId>cee</artifactId>
-		<version>1.4</version>
+		<version>1.5-SNAPSHOT</version>
 		<relativePath>../pom.xml</relativePath>
 	</parent>
 	
