--- a/cee-news-webreader/pom.xml
+++ b/cee-news-webreader/pom.xml
@@ -27,6 +27,12 @@
 				<gwtModule>com.cee.news.DevNewsReader</gwtModule>
 				<gwtDraftCompile>true</gwtDraftCompile>
 			</properties>
+			<dependencies>
+				<dependency>
+					<groupId>org.slf4j</groupId>
+					<artifactId>slf4j-log4j12</artifactId>
+				</dependency>
+			</dependencies>
 		</profile>
 	</profiles>
 
