RESOLVED - # 195: Manage all UI resources in a global ClientBundle https://www.andreasbehnke.com/mantis/view.php?id=195

--- a/cee-news-webreader/pom.xml
+++ b/cee-news-webreader/pom.xml
@@ -163,6 +163,13 @@
 							<goal>generateAsync</goal>
 						</goals>
 					</execution>
+					<execution>
+						<id>css-generation</id>
+						<phase>generate-sources</phase>
+						<goals>
+							<goal>css</goal>
+						</goals>
+					</execution>
 				</executions>
 				<!-- Plugin configuration. There are many available options, see gwt-maven-plugin 
 					documentation at codehaus.org -->
@@ -170,6 +177,9 @@
 					<runTarget>NewsReader.html</runTarget>
 					<hostedWebapp>${webappDirectory}</hostedWebapp>
 					<!-- i18nMessagesBundle>com.cee.news.client.Messages</i18nMessagesBundle -->
+					<cssFiles>
+						<cssFile>com/cee/news/client/ui/Styles.css</cssFile>
+					</cssFiles>
 					<encoding>${source.encoding}</encoding>
 					<module>${gwtModule}</module>
 					<draftCompile>${gwtDraftCompile}</draftCompile>
@@ -240,6 +250,7 @@
 										<goals>
 											<goal>i18n</goal>
 											<goal>generateAsync</goal>
+											<goal>css</goal>
 										</goals>
 									</pluginExecutionFilter>
 									<action>
